--- a/Monaco/index.html
+++ b/Monaco/index.html
@@ -5,10 +5,7 @@
     <link rel="stylesheet"
           data-name="vs/editor/editor.main"
           href="./min/vs/editor/editor.main.css" />
-    <style>
-        html, body { height: 100%; margin: 0; }
-        #container { height: 100%; }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <div id="container"></div>
@@ -18,15 +15,7 @@
     </script>
     <script src="./min/vs/editor/editor.main.nls.js"></script>
     <script src="./min/vs/editor/editor.main.js"></script>
-    <script>
-        var editor = monaco.editor.create(document.getElementById('container'), {
-            value: 'this is a test\n\ttestinggggggg;\nwoooooooo',
-            language: 'javascript',
-            roundedSelection: false,
-	        scrollBeyondLastLine: false,
-	        readOnly: true,
-	        theme: 'vs-dark'
-        });
-    </script>
+    <script src="./editor_init.js"></script>
+    <script src="./bdsp_ev_script.js"></script>
 </body>
 </html>
